--- a/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.Active.cshtml
@@ -20,7 +20,7 @@
 			@foreach (var filter in activeFilters)
 			{
 				<li class="active-filter-item" data-key="@filter.Key" data-group="@filter.FacetGroup.Key">
-					<a class="btn btn-grey btn-sm active-filter-link" href='@Url.FacetRemove(filter)' title="@T("Search.Facet.RemoveFilter", filter.FacetGroup.Label, filter.Value.Label)">
+					<a class="btn btn-gray btn-sm active-filter-link" href='@Url.FacetRemove(filter)' title="@T("Search.Facet.RemoveFilter", filter.FacetGroup.Label, filter.Value.Label)">
 						<span class="active-filter-label">@(filter.Value.Label ?? filter.Value.ToString())</span>
 					</a>
 				</li>
