--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.FilterSort.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.FilterSort.cshtml
@@ -21,7 +21,7 @@
 			<em class="d-none d-xl-inline">@T("Products.SortByX", "<span>" + Model.CurrentSortOrderName + "</span>")</em>	
 			<i class="fa fa-caret-down"></i>
 		</button>
-		<button class="btn btn-grey btn-no-border btn-labeled icon-right btn-block d-lg-none">
+		<button class="btn btn-gray btn-no-border btn-labeled icon-right btn-block d-lg-none">
 			<span>@T("Products.ToSort")</span>
 			<b><i class="fa fa-fw fa-sort"></i></b>
 		</button>
