--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -75,7 +75,13 @@ $btn-padding-y:                 0.5rem;
 $btn-padding-x-sm:              0.75rem;
 $btn-padding-y-sm:              0.375rem;
 $btn-padding-x-lg:              1.5rem;
-$btn-padding-y-lg:              0.8725rem;
+$btn-padding-y-lg:              0.75rem;
+
+$btn-secondary-border:          #ddd;
+$btn-box-shadow:                inset 0 1px 0 rgba(#fff, .15);
+$btn-focus-box-shadow:          0 0 0 2px rgba($brand-primary, .25);
+$btn-active-box-shadow:         inset 0 3px 5px rgba(#000, .125);
+$btn-transition:                box-shadow .12s ease-in-out;
 
 // Equalize input vertical paddings with button paddings
 $input-line-height:             1.8;
@@ -392,8 +398,8 @@ a.pretty-link {
 .menubar-link,
 .nav-link,
 .dropdown-item {
-    > .fa + span, .fa + em { padding-left: 0.4em; }
-    > span + .fa, em + .fa { margin-left: 0.4em; }
+    .fa + span, .fa + em { padding-left: 0.4em; }
+    span + .fa, em + .fa { margin-left: 0.4em; }
 }
 
 
