--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
@@ -51,7 +51,7 @@
 	else
 	{
 		<a href="@Url.Action("AskQuestion", "Product", new RouteValueDictionary { { "id", Model.Id } })"
-			class="btn @(blockStyle ? "btn-secondary" : "btn-grey") add-to-cart-button @cssClasses"
+			class="btn @(blockStyle ? "btn-secondary" : "btn-gray") add-to-cart-button @cssClasses"
 			data-toggle='@(!blockStyle ? "tooltip" : "")'
 			rel="nofollow"
 			title="@T("Products.CallForPrice.GoToForm")">
