Fixed admin navigation

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -218,7 +218,7 @@ header {
 	border-left-color: #ccc;
 }
 
-#navbar .nav > li > a {
+#navbar .navbar-nav > li > a {
 	max-height: @navbarHeight - 12;
 	min-width: 40px;
 	max-width: 80px;
@@ -254,7 +254,7 @@ header {
 	}
 }
 
-#navbar .nav > li:hover > a {
+#navbar .navbar-nav > li:hover > a {
 	background: rgba(255,255,255, .15);
 	.opacity(100);
 }
