--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -40,9 +40,9 @@ $font-size-base:                0.875rem; // 14px
 $font-size-lg:                  1rem; // 16px
 $font-size-sm:                  0.8125rem; // 13px
 $font-size-xs:                  0.75rem; // 2px
-$line-height-base:              1.8;
-$line-height-sm:                1.8;
-$line-height-lg:                1.5;
+$line-height-base:              1.5;
+$line-height-sm:                1.5;
+$line-height-lg:                (4 / 3);
 
 $font-size-h1:                  2.25rem;
 $font-size-h2:                  1.75rem;
