Theming: Numeric range facet (in progress), mf-dropdown with auto-carets, buttons, inputs & other stuff

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -26,9 +26,10 @@ $facet-selection-color:             darken($brand-success, 15%);
 }
 
 .instasearch-term {
-    padding: 0.5rem 1rem;
-    border-radius: 2px;
     position: relative;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 2px;
     border-color: $searchbox-border-color;
     box-shadow: none;
     transition: all 0.2s cubic-bezier(0.4, 0.0, 0.2, 1);
@@ -403,7 +404,7 @@ $facet-control-size:        20px;
         display: block;
         content: '\00d7';
         right: 0.375rem;
-        top: 0.2rem;
+        top: 2px;
         font-size: 1.25rem;
         line-height: 1;
     }
@@ -441,7 +442,7 @@ $facet-control-size:        20px;
             text-align: right;
             right: 2.5rem;
             vertical-align: middle;
-            line-height: 28px;
+            line-height: 1.8;
             font-weight: 400;
         }
     }
