--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_forms.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_forms.scss
@@ -4,11 +4,11 @@
 // ==============================================================
 
 .form-control {
-    box-shadow: none;
+    /*box-shadow: none;
 
     &:focus, &.focus {
         box-shadow: none;
-    }
+    }*/
 }
 
 fieldset.content-group > legend {
