--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_select2.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_select2.scss
@@ -332,7 +332,7 @@ $s2bs-form-control-transition: border-color ease-in-out .15s, box-shadow ease-in
     cursor: pointer;
     float: right;
     font-weight: bold;
-    margin-right: 10px;
+    //margin-right: 10px;
 
     &:hover {
       color: $s2bs-clear-selection-hover-color;
