--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -64,18 +64,20 @@ $btn-border-radius:             .125rem;
 $btn-border-radius-lg:          .1875rem;
 $btn-border-radius-sm:          .125rem;
 
+$input-box-shadow:              none;
+$input-box-shadow-focus:        none;
 $input-border-radius:           $btn-border-radius;
 $input-border-radius-lg:        $btn-border-radius-lg;
 $input-border-radius-sm:        $btn-border-radius-sm;
 
 $btn-font-weight:               600;
-$btn-line-height:               1.8;
+$btn-line-height:               1.5;
 $btn-padding-x:                 1rem;
-$btn-padding-y:                 0.5rem;
+$btn-padding-y:                 0.625rem;
 $btn-padding-x-sm:              0.75rem;
-$btn-padding-y-sm:              0.375rem;
+$btn-padding-y-sm:              0.5rem;
 $btn-padding-x-lg:              1.5rem;
-$btn-padding-y-lg:              0.75rem;
+$btn-padding-y-lg:              0.875rem;
 
 $btn-secondary-border:          #ddd;
 $btn-box-shadow:                inset 0 1px 0 rgba(#fff, .15);
@@ -84,12 +86,16 @@ $btn-active-box-shadow:         inset 0 3px 5px rgba(#000, .125);
 $btn-transition:                box-shadow .12s ease-in-out;
 
 // Equalize input vertical paddings with button paddings
-$input-line-height:             1.8;
+$input-line-height:             $btn-line-height;
 $input-padding-y:               $btn-padding-y;
 $input-padding-y-sm:            $btn-padding-y-sm;
 $input-padding-y-lg:            $btn-padding-y-lg;
 $input-box-shadow:              none;
 $input-box-shadow-focus:        none;
+
+$input-height:                  (($font-size-base * $input-line-height) + ($input-padding-y * 2));
+$input-height-lg:               (($font-size-lg * $input-line-height) + ($input-padding-y-lg * 2));
+$input-height-sm:               (($font-size-sm * $input-line-height) + ($input-padding-y-sm * 2));
 
 
 // Pagination
