Reverted BS4 update changes for admin area

--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/Resources.cshtml
@@ -34,7 +34,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            <div class="alert alert-info fade show">
+            <div class="alert alert-info fade in">
                 @T("Admin.Configuration.Languages.Resources.Description")
                 <button class="close" data-dismiss="alert">x</button>
             </div>          
