--- a/src/Presentation/SmartStore.Web/Administration/Views/Measure/Dimensions.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Measure/Dimensions.cshtml
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="alert alert-warning fade show">
+<div class="alert alert-warning fade in">
 	<button class="close" data-dismiss="alert">&#215;</button>
 	@T("Admin.Configuration.Measures.Dimensions.Description")
 </div>
