--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
@@ -32,7 +32,7 @@
     <div>
         @if (Model.Warnings.Count > 0)
         {
-            <div class="alert alert-error fade show">
+            <div class="alert alert-error fade in">
                 @foreach (var warning in Model.Warnings)
                 {
                     @warning
