--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -167,7 +167,7 @@
         </div>
     </div>
 
-    <div class="alert alert-info fade show">
+    <div class="alert alert-info fade in">
         <button class="close" data-dismiss="alert">x</button>
         <h4>@T("Admin.Configuration.Plugins.Description")</h4>
         <ol>
