--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateAttributeCombinationPopup.cshtml
@@ -23,7 +23,7 @@
 	<div id="CombinationExistenceNote">
 		@if (Model.Warnings.Count > 0)
 		{
-			<div class="alert alert-warning fade show">
+			<div class="alert alert-warning fade in">
 				@foreach (var warning in Model.Warnings)
 				{
 					<p><i class="fa fa-exclamation-triangle"></i>&nbsp;@warning</p>
