--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div class="alert alert-info fade show">
+<div class="alert alert-info fade in">
 	<button class="close" data-dismiss="alert">&#215;</button>
 	@T("Admin.Orders.Products.AddNew.Note1")
 </div>
