--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -243,7 +243,7 @@
 				</td>
 			</tr>
 		}
-		<tr @Html.Raw(Model.AvailableProductTemplates.Count < 2 ? "hidden class='hide d-none'" : "")>
+		<tr @Html.Raw(Model.AvailableProductTemplates.Count < 2 ? "hidden class='hide hidden-xs-up d-none'" : "")>
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.ProductTemplateId)
 			</td>
