--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
@@ -7,7 +7,7 @@
 
 @if (Model.ReturnRequestInfo.HasValue())
 {
-	<div class="alert alert-info fade show">
+	<div class="alert alert-info fade in">
 		<button class="close" data-dismiss="alert">&#215;</button>
 		@Html.Raw(Model.ReturnRequestInfo)
 	</div>
