--- a/src/Presentation/SmartStore.Web/Administration/Views/Security/AccessDenied.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Security/AccessDenied.cshtml
@@ -5,6 +5,6 @@
         @T("Admin.AccessDenied.Title")
     </div>
 </div>*@
-<div class="alert alert-error fade show">
+<div class="alert alert-error fade in">
     @T("Admin.AccessDenied.Description")
 </div>
