Enhanced and refactored some facet stuff

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -69,7 +69,7 @@
 @if (Model.Items.Count > 0)
 {
     <div class="offcanvas-cart-footer">
-        <div class="offcanvas-cart-footer-row flex-nowrap px-0">
+        <div class="offcanvas-cart-footer-row px-0">
             <div class="col pr-2">
                 <a class="btn btn-clear btn-block btn-action" href="@Url.RouteUrl("CompareProducts")">
                     <i class="fa fa-check"></i>
