--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenu.cshtml
@@ -5,7 +5,7 @@
 <div class="ocm-home-layer layer in" data-id="0">
 
     <div class="offcanvas-menu-header offcanvas-tabs">
-        <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
+        <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist">
             <li class="nav-item col">
                 <a id="category-tab" class="nav-link" data-toggle="tab" href="#ocm-categories" role="tab" data-initialized="false">
                     <span class="title">@T("Offcanvas.Menu.Categories")</span>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="offcanvas-menu-footer d-none">
-        <div class="row xs-gutters justify-content-around flex-nowrap">
+        <div class="row xs-gutters justify-content-around">
             <div id="ocm-currency-selector" class="col d-none">
                 <select class="form-control skin" style="width:100%"></select>
             </div>
