--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
@@ -8,7 +8,7 @@
 	var showBuyAction = Model.IsAvailable && !Model.AddToCart.DisableBuyButton;
 }
 
-<div class="row pd-offer-actions flex-nowrap">
+<div class="row pd-offer-actions">
 	@if (showBuyAction)
 	{
 		if (Model.ProductPrice.CallForPrice)
