--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasCart.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="offcanvas-cart-header offcanvas-tabs">
-    <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
+    <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist">
         @if (Model.ShoppingCartEnabled) 
         {
             <li class="nav-item col">
