--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.Navbar.cshtml
@@ -40,7 +40,7 @@
     <a href = "#" class="megamenu-nav-btn btn btn-icon"><i class="fa fa-angle-left"></i></a>
 </div>
 
-<ul class="navbar-nav flex-row flex-nowrap" data-selected-menu-item="@currentNavItem">
+<ul class="navbar-nav flex-row" data-selected-menu-item="@currentNavItem">
 
     @{ Html.RenderWidget("mainmenu_before_first_item"); }
 
