--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Price.cshtml
@@ -29,18 +29,18 @@
 		string value = customRangeFacet.Value.Value != null ? customRangeFacet.Value.Value.ToString() : "";
 		string upperValue = customRangeFacet.Value.UpperValue != null ? customRangeFacet.Value.UpperValue.ToString() : "";
 
-		<div class="d-flex flex-nowrap align-items-center mt-2">
+		<div class="facet-range-container d-flex align-items-center mt-2">
 			<div class="flex-grow-1 pr-2">
-				<input type="number" maxlength="7" id="price-range-from" class="form-control form-control-sm" value="@value" placeholder="@T("Search.PriceRange.From")" />
+				<input type="number" maxlength="7" id="price-range-from" class="facet-range-from form-control form-control-sm" value="@value" placeholder="@T("Search.PriceRange.From")" />
 			</div>
 			<div class="flex-grow-0 font-weight-700">
 				<span>-</span>
 			</div>
 			<div class="flex-grow-1 pl-2">
-				<input type="number" maxlength="7" id="price-range-to" class="form-control form-control-sm" value="@upperValue" placeholder="@T("Search.PriceRange.To")" />
+				<input type="number" maxlength="7" id="price-range-to" class="facet-range-to form-control form-control-sm" value="@upperValue" placeholder="@T("Search.PriceRange.To")" />
 			</div>
 			<div class="flex-grow-0 pl-3">
-				<button type="button" class="btn btn-primary btn-sm btn-icon" id="btn-custom-price-range">
+				<button type="button" class="btn-custom-range btn btn-primary btn-sm btn-icon" id="btn-custom-price-range" data-qname="p">
 					<i class="fa fa-angle-right fs-h5"></i>
 				</button>
 			</div>
