Theming: some css fixes

--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -49,7 +49,7 @@
 									{
 										<div class="media">
 											<span class="pull-left">
-												<img class="media-object img-responsive" src="@Url.Content(shippingMethod.BrandUrl)" alt="@shippingMethod.Name" />
+												<img class="media-object img-fluid" src="@Url.Content(shippingMethod.BrandUrl)" alt="@shippingMethod.Name" />
 											</span>
 											<div class="media-body">
 												@Html.Raw(shippingMethod.Description)
